# astrorobotics_challenge

./: README.md
robot_bringup/: CMakeLists.txt  package.xml
robot_bringup/launch/: bringup.launch.py  robot_gazebo.launch.xml
robot_description/: CMakeLists.txt  package.xml
robot_description/launch/: display.launch.py  display.launch.xml
robot_description/urdf/: common_properties.xacro  lidar.urdf.xacro  robot.urdf.xacro  robot_base.urdf.xacro  robot_gazebo.urdf.xacro
robot_navigation/: CMakeLists.txt  package.xml
robot_navigation/config/: navigation.yaml  slam.yaml
robot_navigation/launch/: navigation.launch.py  slam.launch.py
robot_navigation/map/: aws_map.pgm  aws_map.yaml
robot_navigation/script/: waypoint_node.py
